--- a/src/styles.css
+++ b/src/styles.css
@@ -306,9 +306,7 @@ html.mode--preview #app {
     -ms-flex-direction: row;
     flex-direction: row;
     -webkit-box-pack: center;
-    -webkit-justify-content: center;
     -ms-flex-pack: center;
-    justify-content: center
 }
 .share-password-dialog .button {
     display: inline-block;
@@ -1028,9 +1026,7 @@ html.mode--preview #app {
     -ms-flex-align: center;
     align-items: center;
     -webkit-box-pack: center;
-    -webkit-justify-content: center;
     -ms-flex-pack: center;
-    justify-content: center;
     width: 3rem;
     opacity: .4
 }
@@ -5556,9 +5552,9 @@ video::-webkit-media-text-track-display {
     -ms-flex-direction: column;
     flex-direction: column;
     -webkit-box-pack: center;
-    -webkit-justify-content: center;
+    /*-webkit-justify-content: center;*/
     -ms-flex-pack: center;
-    justify-content: center;
+    /*justify-content: center;*/
     -webkit-box-align: center;
     -webkit-align-items: center;
     -ms-flex-align: center;
@@ -7297,9 +7293,9 @@ body .medium-editor-action-italic {
     -ms-flex-direction: column;
     flex-direction: column;
     -webkit-box-pack: center;
-    -webkit-justify-content: center;
+  /*  -webkit-justify-content: center;*/
     -ms-flex-pack: center;
-    justify-content: center
+    /*justify-content: center;*/
 }
 @media (min-width: 33.75em) {
     .sorting {
@@ -7563,9 +7559,9 @@ body .medium-editor-action-italic {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-    -webkit-justify-content: center;
+    /*-webkit-justify-content: center;*/
     -ms-flex-pack: center;
-    justify-content: center;
+   /* justify-content: center;*/
     -webkit-box-align: center;
     -webkit-align-items: center;
     -ms-flex-align: center;
@@ -7729,9 +7725,9 @@ body .medium-editor-action-italic {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-    -webkit-justify-content: center;
+    /*-webkit-justify-content: center;*/
     -ms-flex-pack: center;
-    justify-content: center;
+    /*justify-content: center;*/
     -webkit-box-align: center;
     -webkit-align-items: center;
     -ms-flex-align: center;
@@ -9305,9 +9301,9 @@ body .medium-editor-action-italic {
     -ms-flex-direction: row;
     flex-direction: row;
     -webkit-box-pack: center;
-    -webkit-justify-content: center;
+   /* -webkit-justify-content: center;*/
     -ms-flex-pack: center;
-    justify-content: center;
+    /*justify-content: center;*/
     position: relative;
     bottom: -5rem
 }
@@ -9880,9 +9876,9 @@ body .medium-editor-action-italic {
     -ms-flex-direction: row;
     flex-direction: row;
     -webkit-box-pack: center;
-    -webkit-justify-content: center;
+    /*-webkit-justify-content: center;*/
     -ms-flex-pack: center;
-    justify-content: center
+    /*justify-content: center*/
 }
 .block-gallery--carousel .block-gallery__dots-list>li,
 .block-gallery--full-carousel .block-gallery__dots-list>li {
@@ -10739,9 +10735,9 @@ body .medium-editor-action-italic {
     -ms-flex-align: center;
     align-items: center;
     -webkit-box-pack: center;
-    -webkit-justify-content: center;
+    /*-webkit-justify-content: center;*/
     -ms-flex-pack: center;
-    justify-content: center;
+    /*justify-content: center;*/
     -webkit-box-flex: 0;
     -webkit-flex: 0 1 100%;
     -ms-flex: 0 1 100%;
@@ -10833,9 +10829,7 @@ body .medium-editor-action-italic {
     -ms-flex-align: center;
     align-items: center;
     -webkit-box-pack: center;
-    -webkit-justify-content: center;
     -ms-flex-pack: center;
-    justify-content: center;
     top: .9rem;
     bottom: .9rem;
     padding: 1rem;
@@ -11616,9 +11610,7 @@ body .medium-editor-action-italic {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-    -webkit-justify-content: center;
     -ms-flex-pack: center;
-    justify-content: center;
     -webkit-box-align: center;
     -webkit-align-items: center;
     -ms-flex-align: center;
@@ -11839,9 +11831,7 @@ body .medium-editor-action-italic {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-    -webkit-justify-content: center;
     -ms-flex-pack: center;
-    justify-content: center;
     -webkit-box-align: start;
     -webkit-align-items: flex-start;
     -ms-flex-align: start;
@@ -12079,9 +12069,7 @@ body .medium-editor-action-italic {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-    -webkit-justify-content: center;
     -ms-flex-pack: center;
-    justify-content: center;
     -webkit-box-align: center;
     -webkit-align-items: center;
     -ms-flex-align: center;
@@ -12228,9 +12216,7 @@ body .medium-editor-action-italic {
     -ms-flex-align: center;
     align-items: center;
     -webkit-box-pack: center;
-    -webkit-justify-content: center;
     -ms-flex-pack: center;
-    justify-content: center;
     height: 100%;
     color: rgba(49, 53, 55, .2);
     border-top: .1rem solid #ddd;
